firefly-template2/src/main/java/com/firefly/template2/parser/Template2Parser.java
// Generated from /Users/qiupengtao/Develop/github_project/firefly/firefly-template2/src/main/java/com/firefly/template2/parser/Template2.g4 by ANTLR 4.6
package com.firefly.template2.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Template2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, EXTENDS=5, INCLUDE=6, SET=7, MAIN=8, FUNCTION=9, 
		IF=10, ELSE=11, THEN_IF=12, FOR=13, WHILE=14, SWITCH=15, CASE=16, BREAK=17, 
		DEFAULT=18, END=19, THIS=20, SUPER=21, OutputString=22, OutputStringWithNewLine=23, 
		OutputNewLine=24, COMMENT=25, LINE_COMMENT=26, IntegerLiteral=27, FloatingPointLiteral=28, 
		BooleanLiteral=29, StringLiteral=30, NullLiteral=31, LPAREN=32, RPAREN=33, 
		LBRACK=34, RBRACK=35, DOT=36, ASSIGN=37, GT=38, LT=39, BANG=40, TILDE=41, 
		QUESTION=42, COLON=43, EQUAL=44, LE=45, GE=46, NOTEQUAL=47, AND=48, OR=49, 
		INC=50, DEC=51, ADD=52, SUB=53, MUL=54, DIV=55, BITAND=56, BITOR=57, CARET=58, 
		MOD=59, ARROW=60, COLONCOLON=61, LSHIFT=62, RSHIFT=63, URSHIFT=64, ADD_ASSIGN=65, 
		SUB_ASSIGN=66, MUL_ASSIGN=67, DIV_ASSIGN=68, AND_ASSIGN=69, OR_ASSIGN=70, 
		XOR_ASSIGN=71, MOD_ASSIGN=72, LSHIFT_ASSIGN=73, RSHIFT_ASSIGN=74, URSHIFT_ASSIGN=75, 
		Identifier=76, WS=77;
	public static final int
		RULE_program = 0, RULE_templateBody = 1, RULE_extendTemplate = 2, RULE_include = 3, 
		RULE_set = 4, RULE_templatePath = 5, RULE_output = 6, RULE_mainFunction = 7, 
		RULE_functionDeclaration = 8, RULE_functionParameters = 9, RULE_selection = 10, 
		RULE_switchCondition = 11, RULE_whileLoop = 12, RULE_forLoop = 13, RULE_expression = 14, 
		RULE_beanAccess = 15, RULE_objectAccess = 16, RULE_propertyAccess = 17, 
		RULE_arrayAccess = 18, RULE_mapAccess = 19, RULE_methodCall = 20, RULE_callMethodParameters = 21;
	public static final String[] ruleNames = {
		"program", "templateBody", "extendTemplate", "include", "set", "templatePath", 
		"output", "mainFunction", "functionDeclaration", "functionParameters", 
		"selection", "switchCondition", "whileLoop", "forLoop", "expression", 
		"beanAccess", "objectAccess", "propertyAccess", "arrayAccess", "mapAccess", 
		"methodCall", "callMethodParameters"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "'${'", "'}'", "'#extends'", "'#include'", "'#set'", 
		"'#main'", "'#function'", "'#if'", "'#else'", "'if'", "'#for'", "'#while'", 
		"'#switch'", "'#case'", "'#break'", "'#default'", "'#end'", "'this'", 
		"'super'", null, null, "'&nl;'", null, null, null, null, null, null, "'null'", 
		"'('", "')'", "'['", "']'", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", 
		"'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
		"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'->'", 
		"'::'", "'<<'", "'>>'", "'>>>'", "'+='", "'-='", "'*='", "'/='", "'&='", 
		"'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "EXTENDS", "INCLUDE", "SET", "MAIN", "FUNCTION", 
		"IF", "ELSE", "THEN_IF", "FOR", "WHILE", "SWITCH", "CASE", "BREAK", "DEFAULT", 
		"END", "THIS", "SUPER", "OutputString", "OutputStringWithNewLine", "OutputNewLine", 
		"COMMENT", "LINE_COMMENT", "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", 
		"StringLiteral", "NullLiteral", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", 
		"LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", 
		"DIV", "BITAND", "BITOR", "CARET", "MOD", "ARROW", "COLONCOLON", "LSHIFT", 
		"RSHIFT", "URSHIFT", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
		"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
		"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "Identifier", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Template2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Template2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ExtendTemplateContext extendTemplate() {
			return getRuleContext(ExtendTemplateContext.class,0);
		}
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(44);
				extendTemplate();
				}
			}

			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MAIN) {
				{
				setState(47);
				mainFunction();
				}
			}

			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(50);
				functionDeclaration();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateBodyContext extends ParserRuleContext {
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public List<SetContext> set() {
			return getRuleContexts(SetContext.class);
		}
		public SetContext set(int i) {
			return getRuleContext(SetContext.class,i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<SelectionContext> selection() {
			return getRuleContexts(SelectionContext.class);
		}
		public SelectionContext selection(int i) {
			return getRuleContext(SelectionContext.class,i);
		}
		public List<SwitchConditionContext> switchCondition() {
			return getRuleContexts(SwitchConditionContext.class);
		}
		public SwitchConditionContext switchCondition(int i) {
			return getRuleContext(SwitchConditionContext.class,i);
		}
		public List<WhileLoopContext> whileLoop() {
			return getRuleContexts(WhileLoopContext.class);
		}
		public WhileLoopContext whileLoop(int i) {
			return getRuleContext(WhileLoopContext.class,i);
		}
		public List<ForLoopContext> forLoop() {
			return getRuleContexts(ForLoopContext.class);
		}
		public ForLoopContext forLoop(int i) {
			return getRuleContext(ForLoopContext.class,i);
		}
		public List<BeanAccessContext> beanAccess() {
			return getRuleContexts(BeanAccessContext.class);
		}
		public BeanAccessContext beanAccess(int i) {
			return getRuleContext(BeanAccessContext.class,i);
		}
		public TemplateBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterTemplateBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitTemplateBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitTemplateBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateBodyContext templateBody() throws RecognitionException {
		TemplateBodyContext _localctx = new TemplateBodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_templateBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << INCLUDE) | (1L << SET) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << SWITCH) | (1L << OutputString) | (1L << OutputStringWithNewLine) | (1L << OutputNewLine))) != 0)) {
				{
				setState(64);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OutputString:
				case OutputStringWithNewLine:
				case OutputNewLine:
					{
					setState(56);
					output();
					}
					break;
				case SET:
					{
					setState(57);
					set();
					}
					break;
				case INCLUDE:
					{
					setState(58);
					include();
					}
					break;
				case IF:
					{
					setState(59);
					selection();
					}
					break;
				case SWITCH:
					{
					setState(60);
					switchCondition();
					}
					break;
				case WHILE:
					{
					setState(61);
					whileLoop();
					}
					break;
				case FOR:
					{
					setState(62);
					forLoop();
					}
					break;
				case T__2:
					{
					setState(63);
					beanAccess();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtendTemplateContext extends ParserRuleContext {
		public TerminalNode EXTENDS() { return getToken(Template2Parser.EXTENDS, 0); }
		public TemplatePathContext templatePath() {
			return getRuleContext(TemplatePathContext.class,0);
		}
		public ExtendTemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extendTemplate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterExtendTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitExtendTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitExtendTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtendTemplateContext extendTemplate() throws RecognitionException {
		ExtendTemplateContext _localctx = new ExtendTemplateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_extendTemplate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(EXTENDS);
			setState(70);
			templatePath();
			setState(71);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(Template2Parser.INCLUDE, 0); }
		public TerminalNode THIS() { return getToken(Template2Parser.THIS, 0); }
		public TerminalNode SUPER() { return getToken(Template2Parser.SUPER, 0); }
		public TemplatePathContext templatePath() {
			return getRuleContext(TemplatePathContext.class,0);
		}
		public MethodCallContext methodCall() {
			return getRuleContext(MethodCallContext.class,0);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_include);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(INCLUDE);
			setState(74);
			match(LPAREN);
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case THIS:
				{
				setState(75);
				match(THIS);
				}
				break;
			case SUPER:
				{
				setState(76);
				match(SUPER);
				}
				break;
			case Identifier:
				{
				setState(77);
				templatePath();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(80);
				methodCall();
				}
			}

			setState(83);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(Template2Parser.SET, 0); }
		public TerminalNode Identifier() { return getToken(Template2Parser.Identifier, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(SET);
			setState(86);
			match(LPAREN);
			setState(87);
			match(Identifier);
			setState(88);
			match(ASSIGN);
			setState(89);
			expression(0);
			setState(90);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplatePathContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(Template2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(Template2Parser.Identifier, i);
		}
		public TemplatePathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templatePath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterTemplatePath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitTemplatePath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitTemplatePath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplatePathContext templatePath() throws RecognitionException {
		TemplatePathContext _localctx = new TemplatePathContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_templatePath);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(Identifier);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					match(DOT);
					setState(94);
					match(Identifier);
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public TerminalNode OutputString() { return getToken(Template2Parser.OutputString, 0); }
		public TerminalNode OutputStringWithNewLine() { return getToken(Template2Parser.OutputStringWithNewLine, 0); }
		public TerminalNode OutputNewLine() { return getToken(Template2Parser.OutputNewLine, 0); }
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitOutput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitOutput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OutputString) | (1L << OutputStringWithNewLine) | (1L << OutputNewLine))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(Template2Parser.MAIN, 0); }
		public TemplateBodyContext templateBody() {
			return getRuleContext(TemplateBodyContext.class,0);
		}
		public TerminalNode END() { return getToken(Template2Parser.END, 0); }
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterMainFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitMainFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitMainFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mainFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(MAIN);
			setState(103);
			templateBody();
			setState(104);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(Template2Parser.FUNCTION, 0); }
		public TerminalNode Identifier() { return getToken(Template2Parser.Identifier, 0); }
		public FunctionParametersContext functionParameters() {
			return getRuleContext(FunctionParametersContext.class,0);
		}
		public TemplateBodyContext templateBody() {
			return getRuleContext(TemplateBodyContext.class,0);
		}
		public TerminalNode END() { return getToken(Template2Parser.END, 0); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(FUNCTION);
			setState(107);
			match(Identifier);
			setState(108);
			functionParameters();
			setState(109);
			templateBody();
			setState(110);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParametersContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(Template2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(Template2Parser.Identifier, i);
		}
		public FunctionParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterFunctionParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitFunctionParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitFunctionParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionParametersContext functionParameters() throws RecognitionException {
		FunctionParametersContext _localctx = new FunctionParametersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionParameters);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(LPAREN);
				setState(113);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(LPAREN);
				setState(115);
				match(Identifier);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(116);
					match(T__1);
					setState(117);
					match(Identifier);
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectionContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(Template2Parser.IF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TemplateBodyContext> templateBody() {
			return getRuleContexts(TemplateBodyContext.class);
		}
		public TemplateBodyContext templateBody(int i) {
			return getRuleContext(TemplateBodyContext.class,i);
		}
		public TerminalNode END() { return getToken(Template2Parser.END, 0); }
		public List<TerminalNode> ELSE() { return getTokens(Template2Parser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(Template2Parser.ELSE, i);
		}
		public List<TerminalNode> THEN_IF() { return getTokens(Template2Parser.THEN_IF); }
		public TerminalNode THEN_IF(int i) {
			return getToken(Template2Parser.THEN_IF, i);
		}
		public SelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).enterSelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Template2Listener ) ((Template2Listener)listener).exitSelection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Template2Visitor ) return ((Template2Visitor<? extends T>)visitor).visitSelection(this);
			else return visitor.visitChildren(this);
		}
	}
